# alpha_bot

./: Readme.md
src/alpha-bot/alpha_bot_control/: CMakeLists.txt
src/alpha-bot/alpha_bot_control/config/: alpha_bot_control.yaml  pid.yaml
src/alpha-bot/alpha_bot_control/launch/: alpha_bot.launch  alpha_bot_control.launch  alpha_bot_rviz.launch
src/alpha-bot/alpha_bot_control/src/: PathWaypointsPublisher.cpp  alpha_bot_purepursuit_node.cpp
src/alpha-bot/alpha_bot_description/: CMakeLists.txt  README.md
src/alpha-bot/alpha_bot_description/launch/: alpha_bot_view.launch
src/alpha-bot/alpha_bot_description/urdf/: alpha_bot.urdf.xacro
src/alpha-bot/alpha_bot_localization/: CMakeLists.txt
src/alpha-bot/alpha_bot_localization/launch/: KF_alpha_bot.launch  KF_alpha_bot_groundtruth.launch  KF_alpha_bot_original.launch  KF_alpha_bot_original_conlaser.launch  KF_alpha_bot_separado_conlaser.launch  mapeado.launch
src/alpha-bot/alpha_bot_localization/maps/: mapa0_1.pgm  mapa0_1.yaml  mapa_global.yaml  prueba_mapa.yaml
src/alpha-bot/alpha_bot_localization/rviz/: AMCL_alpha_bot.rviz  KF_alpha_bot.rviz  KF_alpha_bot_purepursuit.rviz  mapeado_alpha_bot.rviz
src/alpha-bot/alpha_bot_odometry/: CMakeLists.txt
src/alpha-bot/alpha_bot_odometry/leeme/: Localizacion Semana 3 Alpha-Bot.docx
src/alpha-bot/alpha_bot_odometry/src/: alpha_bot_odometry_node.cpp  ground_truth_translation.cpp  publicasuscribe_ant.cpp
src/alpha-bot/alpha_bot_planner/: CMakeLists.txt
src/alpha-bot/alpha_bot_planner/launch/: planner.launch
src/alpha-bot/alpha_bot_simulation/: CMakeLists.txt
(+15 files in other folders)
